# gsgit

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  build.gradle  debug.keystore  gradle.properties  gradlew  gsgit_security_and_code_audit.txt  settings.gradle
.claude/rules/: audit-playbook.md  data-service.md  ui-screen.md
.github/workflows/: android.yml  build.yml
app/: build.gradle  proguard-rules.pro
app/omvll/: README.md  omvll_config.py
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  security.c
app/src/main/res/drawable/: ic_launcher_monochrome.xml  ic_stat_gsgit.xml
app/src/main/res/values/: colors.xml  gsgit_push.xml  strings.xml  (+2 more)
docs/: admin-api-v2-endpoints.md  admin-app-brief-for-gpt.md  api-coverage-precheck.md  code-tab-polish-plan.md  code-tab-spec.md  code-tab-ui-plan.md  decomposition-log.md  expansion-plan.md  landing-prompt.md  lmg-client-changes-for-fable.md  lmg-clips-video-for-fable.md  lmg-crossfade-for-fable.md  lmg-landscape-tablet-for-fable.md  lmg-ml-autocrossfade-for-fable.md  lmg-public-downloads-for-fable.md  lmg-server-deploy.md  lmg-server-spec.md  port-from-glassfiles.md  profile-insights.md  roadmap-2.0-api-audit.md
docs/tasks/: security-enforcement.md
server/: .env.example  .gitignore  README.md  deploy.sh  docker-compose.yml  xray-setup.sh
server-lmg/: .env.example  Dockerfile  docker-compose.yml  install.sh  serverLMG.js
server/api/: Dockerfile  server.js
server/caddy/: Caddyfile
server/site/: app.json  index.html  privacy.html  site.json
server/xray/: config.template.json
(+203 files in other folders)
